Edit author name for Korean

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
     published and in bookstores by December 2023. <br \><br \>
 
     <img class="book-image" src="/assets/img/book.png" />
-  name-kr: 고 예슬 # author name
+  name-kr: 안녕하세요 고예슬입니다. # author name
   bio-kr: >- # tell to the world
     탐험을 좋아하고 호기심이 많은 개발자. 심리학을 전공한 후 상상하는 것을 직접 만들 수 있는 코딩에 흥미가 생겨 개발자로 커리어를 시작하였습니다. 위메프, 네이버, 메타의 아시아 본부를 거쳐 현재는 싱가포르 스타트업에서 최고 성장 책임자(CGO) 대행과 프로덕트 오퍼레이션 그룹 리드로 프로덕트 성장의 방향성을 설정하고 있습니다. 공유를 통해 함께 성장하는 과정을 지향합니다. <br \><br \>
 
